[package]
name = "axum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
tower-http = { version = "0.1.1", features = ["trace"] }
tracing-appender = "0.1.2"
