[package]
name = "tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-subscriber = "0.2.19"
